--- a/style.css
+++ b/style.css
@@ -2,6 +2,15 @@
 ::before,
 ::after {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+:root {
+  --white: #fff;
+  --main-text-color: hsl(216, 15%, 48%);
+  --background-color: hsl(212, 45%, 89%);
+  --title-color: hsl(218, 44%, 22%);
 }
 
 body {
@@ -11,7 +20,8 @@ body {
   justify-content: center;
   font-family: "Outfit", sans-serif;
   font-size: 15px;
-  background-color: hsl(212, 45%, 89%);
+  color: var(--main-text-color);
+  background-color: var(--background-color);
 }
 
 p,
@@ -30,21 +40,20 @@ img {
 
 .container {
   width: 300px;
-  padding: 15px 15px 30px 15px;
-  background-color: white;
-  color: hsl(216, 15%, 48%);
+  padding: 15px 15px 40px 15px;
+  background-color: var(--white);
   border-radius: 20px;
 }
 
 .centered {
-  margin: 1em auto 0em;
+  margin: 20px auto 0px;
   width: 250px;
   text-align: center;
 }
 
 .title {
-  margin-bottom: 0.8em;
+  margin-bottom: 20px;
   font-size: 20px;
   font-weight: 700;
-  color: hsl(218, 44%, 22%);
+  color: var(--title-color);
 }
