--- a/style.css
+++ b/style.css
@@ -14,12 +14,14 @@
 }
 
 body {
+  margin: 0;
+  padding: 0 15px;
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   font-family: "Outfit", sans-serif;
-  font-size: 15px;
+  font-size: 0.9rem;
   color: var(--main-text-color);
   background-color: var(--background-color);
 }
@@ -39,7 +41,7 @@ img {
 }
 
 .container {
-  width: 300px;
+  max-width: 320px;
   padding: 15px 15px 40px 15px;
   background-color: var(--white);
   border-radius: 20px;
@@ -47,7 +49,7 @@ img {
 
 .centered {
   margin: 20px auto 0px;
-  width: 250px;
+  max-width: 250px;
   text-align: center;
 }
 
